--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "tailwindcss": "^3.4.10"
   }
 }
