--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "helmet": "^7.1.0",
     "tailwindcss": "^3.4.10"
