--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "helmet": "^7.1.0",
+    "node-cache": "^5.1.2",
     "tailwindcss": "^3.4.10"
   }
 }
