--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bruno": "bru run __tests__/"
+    "bruno": "bru run __tests__/",
+    "dev": "vercel dev"
   },
   "keywords": [],
   "author": "",
