--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bruno": "bru run __tests__/",
-    "dev": "vercel dev"
+    "go": "vercel dev"
   },
   "keywords": [],
   "author": "",
