--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bruno": "bru run __tests__/",
+    "style": "tailwindcss -i ./style/input.css -o ./api/public/tailstyle.css --watch",
     "go": "vercel dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
+    "argon2": "^0.41.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.7.7",
+    "@types/validator": "^13.12.2",
     "helmet": "^7.2.0",
     "node-cache": "^5.1.2",
     "tailwindcss": "^3.4.14"
